<resources>
    <string name="app_name">MyCloset</string>
    <string name="app_name1">My</string>
    <string name="app_name2">closet</string>

    <!--회원가입 뷰 & 로그인 뷰-->
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="phone">전화번호</string>
    <string name="signup_start">회원가입</string>
    <string name="signup_end">가입하기</string>
    <string name="login">로그인</string>
    <string name="back">이전화면으로</string>

    <!--계절 선택 뷰-->
    <string name="spring">봄 </string>
    <string name="summer">여름</string>
    <string name="autumn">가을</string>
    <string name="winter">겨울</string>
    <string name="etc">기타</string>
    <string name="select_dailylook">데일리룩</string>

    <!--메인 뷰 & add_dailylook 뷰-->
    <string name="all">전체</string>
    <string name="top">상의</string>
    <string name="bottom">하의</string>
    <string name="outer">아우터</string>
    <string name="shoes">신발</string>
    <string name="bag">가방</string>
    <string name="stuff">잡화</string>
    <string name="select_finish">선택 완료</string>
    <string name="update_dailylook">데일리룩 등록</string>

    <!--add closet 뷰-->
    <string name="season">계절</string>
    <string name="category">카테고리</string>
    <string name="name">이름</string>
    <string name="memo">메모</string>
    <string name="add_closet_explanation1">이미지 불러오기</string>
    <string name="add_closet">옷 등록</string>

    <!--dailylook 뷰-->
    <string name="dailylook_list">데일리룩 목록</string>
    <string name="plus">+</string>

    <!--closet detail뷰-->
    <string name="update">확인/수정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>