<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_add_closet">

    <TextView
        android:id="@+id/add_closet_tv_My"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:theme="@style/B32"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/add_closet_tv_closet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:theme="@style/B32"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_My"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/add_closet_tv_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:padding="10dp"
        android:text="@string/season"
        android:theme="@style/SB18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_closet" />

    <CheckBox
        android:id="@+id/add_closet_cb_spring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="28dp"
        android:paddingRight="20dp"
        android:text="@string/spring"
        android:theme="@style/R14"
        app:layout_constraintLeft_toRightOf="@id/add_closet_tv_season"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_closet" />

    <CheckBox
        android:id="@+id/add_closet_cb_summer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingRight="20dp"
        android:text="@string/summer"
        android:theme="@style/R14"
        app:layout_constraintLeft_toRightOf="@id/add_closet_cb_spring"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_closet" />

    <CheckBox
        android:id="@+id/add_closet_cb_autumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingRight="20dp"
        android:text="@string/autumn"
        android:theme="@style/R14"
        app:layout_constraintLeft_toRightOf="@id/add_closet_cb_summer"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_closet" />

    <CheckBox
        android:id="@+id/add_closet_cb_winter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingRight="20dp"
        android:text="@string/winter"
        android:theme="@style/R14"
        app:layout_constraintLeft_toRightOf="@id/add_closet_cb_autumn"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_closet" />

    <TextView
        android:id="@+id/add_closet_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:theme="@style/SB18"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_season"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rGroup_category"
        app:layout_constraintLeft_toRightOf="@id/add_closet_tv_category"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_season"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outer"
                android:theme="@style/R14"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:theme="@style/R14"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom"
                android:theme="@style/R14"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:theme="@style/R14"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bag"
                android:theme="@style/R14"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuff"
                android:theme="@style/R14"/>
        </LinearLayout>
    </RadioGroup>

    <TextView
        android:id="@+id/add_closet_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:padding="10dp"
        android:text="@string/name"
        android:theme="@style/SB18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rGroup_category" />

    <EditText
        android:id="@+id/signup_edt_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/signup_rectangle_radius_5"
        android:backgroundTint="@color/sub_color"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@id/add_closet_tv_name"
        app:layout_constraintTop_toBottomOf="@id/rGroup_category" />

    <TextView
        android:id="@+id/add_closet_tv_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:padding="10dp"
        android:text="@string/memo"
        android:theme="@style/SB18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_name" />

    <EditText
        android:id="@+id/add_closet_edt_memo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/signup_rectangle_radius_5"
        android:backgroundTint="@color/sub_color"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@id/add_closet_tv_memo"
        app:layout_constraintTop_toBottomOf="@id/add_closet_tv_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_closet_btn_add_closet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_closet"
        android:theme="@style/SB16"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:padding="10dp"
        android:backgroundTint="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_closet_edt_memo"
        android:background="@drawable/season_rectangle_radius_10"/>






</androidx.constraintlayout.widget.ConstraintLayout>