<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_tv_My"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:theme="@style/B32"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/login_tv_closet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:theme="@style/B32"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_tv_My"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/login_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:theme="@style/R14"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_closet"/>

    <EditText
        android:id="@+id/login_edt_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_rectangle_radius_5"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="29dp"
        android:padding="10dp"
        android:backgroundTint="@color/sub_color"
        app:layout_constraintLeft_toRightOf="@id/login_tv_id"
        app:layout_constraintTop_toBottomOf="@id/login_tv_closet"/>

    <TextView
        android:id="@+id/login_tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:theme="@style/R14"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_id"/>

    <EditText
        android:id="@+id/login_edt_pw"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_rectangle_radius_5"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="29dp"
        android:padding="10dp"
        android:backgroundTint="@color/sub_color"
        app:layout_constraintLeft_toRightOf="@id/login_tv_id"
        app:layout_constraintTop_toBottomOf="@id/login_edt_id"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/SB16"
        android:background="@drawable/signup_rectangle_radius_5"
        android:backgroundTint="@color/main_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edt_pw"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:theme="@style/R14"
        android:textColor="@color/black"
        android:layout_marginLeft="160dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login"/>




</androidx.constraintlayout.widget.ConstraintLayout>