<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/main_tv_My"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:theme="@style/B32"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/main_tv_closet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:theme="@style/B32"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/main_tv_My"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_tv_closet"
        android:background="@drawable/signup_rectangle_radius_5"
        android:backgroundTint="@color/main_color"
        android:text="@string/plus"
        android:theme="@style/SB30" />


</androidx.constraintlayout.widget.ConstraintLayout>